@@ -1,11 +1,11 @@
 package com.cube.interceptor.jaxrs;
 
+import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
 import java.util.Optional;
 
 import javax.annotation.Priority;
@@ -19,7 +19,6 @@ import javax.ws.rs.ext.Provider;
 import javax.ws.rs.ext.WriterInterceptor;
 import javax.ws.rs.ext.WriterInterceptorContext;
 
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.BooleanUtils;
 import org.apache.logging.log4j.util.Strings;
 
@@ -30,6 +29,7 @@ import io.md.constants.Constants;
 import io.md.dao.MDTraceInfo;
 import io.md.utils.CommonUtils;
 import io.md.utils.UtilException;
+import io.opentracing.Scope;
 import io.opentracing.Span;
 
 import com.cube.interceptor.config.Config;
@@ -112,52 +112,73 @@ public class LoggingFilter implements ContainerRequestFilter, ContainerResponseF
 	private void logRequest(ContainerRequestContext reqContext, String apiPath,
 		String cRequestId, MultivaluedMap<String, String> queryParams, MDTraceInfo mdTraceInfo)
 		throws IOException {
-		//hdrs
-		MultivaluedMap<String, String> requestHeaders = reqContext.getHeaders();
+		final Span span = io.cube.agent.Utils.createPerformanceSpan("reqProcess");
+		try (Scope scope = io.cube.agent.Utils.activatePerformanceSpan(span)){
+			//hdrs
+			MultivaluedMap<String, String> requestHeaders = reqContext.getHeaders();
 
-		//meta
-		MultivaluedMap<String, String> meta = Utils
-			.getRequestMeta(reqContext.getMethod(), cRequestId, Optional.empty());
+			//meta
+			MultivaluedMap<String, String> meta = Utils
+				.getRequestMeta(reqContext.getMethod(), cRequestId, Optional.empty());
 
-		//body
-		String requestBody = getRequestBody(reqContext);
+			//body
+			byte[] requestBody = getRequestBody(reqContext);
 
-		Utils.createAndLogReqEvent(apiPath, queryParams, requestHeaders, meta, mdTraceInfo,
-			requestBody);
+			Utils.createAndLogReqEvent(apiPath, queryParams, requestHeaders, meta, mdTraceInfo,
+				requestBody);
+		} finally {
+			span.finish();
+		}
 	}
 
 	private void logResponse(WriterInterceptorContext context)
 		throws IOException {
-		Object apiPathObj = context.getProperty(Constants.MD_API_PATH_PROP);
-		Object traceMetaMapObj = context.getProperty(Constants.MD_TRACE_META_MAP_PROP);
-		Object respHeadersObj = context.getProperty(Constants.MD_RESPONSE_HEADERS_PROP);
-		Object statusObj = context.getProperty(Constants.MD_STATUS_PROP);
-		Object traceInfo = context.getProperty(Constants.MD_TRACE_INFO);
+		Object parentSpanObj = context.getProperty(TracingFilter.spanKey);
+		Span span = null;
+		if (parentSpanObj != null) {
+			span = io.cube.agent.Utils.createPerformanceSpan("respProcess",
+				((Span)parentSpanObj).context());
+		} else {
+			span = io.cube.agent.Utils.createPerformanceSpan("respProcess");
+		}
 
-		ObjectMapper mapper = new ObjectMapper();
-		//hdrs
-		MultivaluedMap<String, String> responseHeaders = respHeadersObj != null ? mapper
-			.convertValue(respHeadersObj, MultivaluedMap.class) : Utils.createEmptyMultivaluedMap();
+		try (Scope scope = io.cube.agent.Utils.activatePerformanceSpan(span)) {
+			Object apiPathObj = context.getProperty(Constants.MD_API_PATH_PROP);
+			Object traceMetaMapObj = context.getProperty(Constants.MD_TRACE_META_MAP_PROP);
+			Object respHeadersObj = context.getProperty(Constants.MD_RESPONSE_HEADERS_PROP);
+			Object statusObj = context.getProperty(Constants.MD_STATUS_PROP);
+			Object traceInfo = context.getProperty(Constants.MD_TRACE_INFO);
 
-		MultivaluedMap<String, String> traceMetaMap = traceMetaMapObj != null ? mapper
-			.convertValue(traceMetaMapObj, MultivaluedMap.class)
-			: Utils.createEmptyMultivaluedMap();
-		String apiPath = apiPathObj != null ? apiPathObj.toString() : Strings.EMPTY;
-		//meta
-		MultivaluedMap<String, String> meta = Utils
-			.getResponseMeta(apiPath,
-				String.valueOf(statusObj != null ? statusObj.toString() : Strings.EMPTY),
-				Optional.empty());
-		meta.putAll(traceMetaMap);
 
-		MDTraceInfo mdTraceInfo = traceInfo != null ? (MDTraceInfo) traceInfo : new MDTraceInfo();
+			ObjectMapper mapper = new ObjectMapper();
+			//hdrs
+			MultivaluedMap<String, String> responseHeaders = respHeadersObj != null ? mapper
+				.convertValue(respHeadersObj, MultivaluedMap.class)
+				: Utils.createEmptyMultivaluedMap();
 
-		//body
-		String responseBody = getResponseBody(context);
+			MultivaluedMap<String, String> traceMetaMap = traceMetaMapObj != null ? mapper
+				.convertValue(traceMetaMapObj, MultivaluedMap.class)
+				: Utils.createEmptyMultivaluedMap();
+			String apiPath = apiPathObj != null ? apiPathObj.toString() : Strings.EMPTY;
+			//meta
+			MultivaluedMap<String, String> meta = Utils
+				.getResponseMeta(apiPath,
+					String.valueOf(statusObj != null ? statusObj.toString() : Strings.EMPTY),
+					Optional.empty());
+			meta.putAll(traceMetaMap);
 
-		Utils.createAndLogRespEvent(apiPath, responseHeaders, meta, mdTraceInfo, responseBody);
+			MDTraceInfo mdTraceInfo =
+				traceInfo != null ? (MDTraceInfo) traceInfo : new MDTraceInfo();
 
-		removeSetContextProperty(context);
+			//body
+			byte[] responseBody = getResponseBody(context);
+
+			Utils.createAndLogRespEvent(apiPath, responseHeaders, meta, mdTraceInfo, responseBody);
+
+			removeSetContextProperty(context);
+		} finally {
+			span.finish();
+		}
 	}
 
 	private void removeSetContextProperty(WriterInterceptorContext context) {
@@ -171,7 +192,6 @@ public class LoggingFilter implements ContainerRequestFilter, ContainerResponseF
 
 	private MDTraceInfo getTraceInfo(Span currentSpan) {
 		JaegerSpanContext spanContext = (JaegerSpanContext) currentSpan.context();
-
 		String traceId = spanContext.getTraceId();
 		String spanId = String.valueOf(spanContext.getSpanId());
 		String parentSpanId = String.valueOf(spanContext.getParentId());
@@ -185,28 +205,38 @@ public class LoggingFilter implements ContainerRequestFilter, ContainerResponseF
 		return Utils.buildTraceInfoMap(mdTraceInfo, xRequestId);
 	}
 
-	private String getRequestBody(ContainerRequestContext reqContext) throws IOException {
-		String json = IOUtils.toString(reqContext.getEntityStream(), StandardCharsets.UTF_8);
-		InputStream in = IOUtils.toInputStream(json, StandardCharsets.UTF_8);
-		reqContext.setEntityStream(in);
+	private byte[] getRequestBody(ContainerRequestContext reqContext) throws IOException {
+		final Span span = io.cube.agent.Utils.createPerformanceSpan("reqBody");
+		try (Scope scope = io.cube.agent.Utils.activatePerformanceSpan(span)){
+			byte[] reqBytes = reqContext.getEntityStream().readAllBytes();
+			//String json = IOUtils.toString(reqContext.getEntityStream(), StandardCharsets.UTF_8);
+			new ByteArrayInputStream(reqBytes);
+			InputStream in = new ByteArrayInputStream(reqBytes);
+			reqContext.setEntityStream(in);
 
-		return json;
+			return reqBytes;
+		} finally {
+			span.finish();
+		}
 	}
 
-	private String getResponseBody(WriterInterceptorContext context) throws IOException {
-		OutputStream originalStream = context.getOutputStream();
-		ByteArrayOutputStream baos = new ByteArrayOutputStream();
-		String responseBody;
-		context.setOutputStream(baos);
-		try {
-			context.proceed();
+	private byte[] getResponseBody(WriterInterceptorContext context) throws IOException {
+		final Span span = io.cube.agent.Utils.createPerformanceSpan("respBody");
+		try (Scope scope = io.cube.agent.Utils.activatePerformanceSpan(span)){
+			OutputStream originalStream = context.getOutputStream();
+			ByteArrayOutputStream baos = new ByteArrayOutputStream();
+			context.setOutputStream(baos);
+			try {
+				context.proceed();
+			} finally {
+				//responseBody = baos.toString("UTF-8");
+				baos.writeTo(originalStream);
+				baos.close();
+				context.setOutputStream(originalStream);
+			}
+			return baos.toByteArray();
 		} finally {
-			responseBody = baos.toString("UTF-8");
-			baos.writeTo(originalStream);
-			baos.close();
-			context.setOutputStream(originalStream);
+			span.finish();
 		}
-
-		return responseBody;
 	}
 }
